tests/paczka1/small_fuzzy/81900178.err
Error in line 6: A760 A908 126,5
Error in line 1: UMBjk A566 6,5
